@@ -2,6 +2,7 @@
  - Prefer sample name from para.ini over data folder name (dclab 0.3.0.dev15)
  - Implement new .rtdc file format (dclab 0.3.0.dev20) (#151)
  - Bugfixes:
+   - Automatically fix inverted plotting range
    - Enable scrolling in data export dialogs
    - Ignore missing features during data export 
    - Plotting circularity with isoelastics failed (dclab 0.3.0.dev21) (#197)
